--- a/Pages/Consultas/C_Emergencia.razor
+++ b/Pages/Consultas/C_Emergencia.razor
@@ -1,69 +1,76 @@
-﻿@page "/C_Emergencia"
+﻿@page "/C_DetallesEmergencias"
 
 
 
-@inject EmergenciaBLL Emergencia
-@inject PacienteBLL Paciente
+@inject DetalleEmergenciaBLL DetalleEmergencia
 
 
 <head>
     <style>
-        .hidden{
+        .hidden {
             display: none;
         }
 
-        .form-select{
+        .form-select {
             border: none;
             width: 150px;
         }
+
         .form-floating {
             width: 15%;
         }
-            .Entrada{
-        display: inline-block;
-        padding: 5px;
-        align-items: center;
-    }
-    .Entrada input{
-        border-radius: 50px;
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border: 15px;
-        margin: 5px;
-    }
-    .Entrada label
-    {
-        margin: 5px;
-    }
-    .Entrada textarea{
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border-radius: 15px;
-        width: 100%;
-    }
 
+        .Entrada {
+            display: inline-block;
+            padding: 5px;
+            align-items: center;
+        }
 
+        .Entrada input {
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
+
+        .Entrada label {
+            margin: 5px;
+        }
+
+        .Entrada textarea {
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border-radius: 15px;
+            width: 100%;
+        }
     </style>
 </head>
 <div class="body">
 
- <h3>Consultar Emergencia</h3>
+    <h3>Consultar DetallesEmergencias</h3>
 
-<RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced"
-    AllowGrouping="true" AllowSorting="true" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
-    Data="Paciente.GetList()" TItem="Paciente" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true"
-    >
-    
+    <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false"
+        FilterMode="FilterMode.Advanced" AllowGrouping="true" AllowSorting="true" AllowPaging="true"
+        PagerHorizontalAlign="HorizontalAlign.Left" Data="DetalleEmergencia.GetList()" TItem="DetalleEmergencia" ColumnWidth="300px"
+        LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
+
         <Columns>
-            <RadzenDataGridColumn TItem="Paciente" Property="PrimerNombre" Title="Primer nombre" />
-            <RadzenDataGridColumn TItem="Paciente" Property="SegundoNombre" Title="Segundo Nombre" />
-            <RadzenDataGridColumn TItem="Paciente" Property="PrimerApellido" Title="Primer Apellido" />
-            <RadzenDataGridColumn TItem="Paciente" Property="SegundoApellido" Title="Segundo Apellido" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Sexo" Title="Sexo" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Cedula" Title="Cedula" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Ocupacion" Title="Ocupacion" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Tutor" Title="Tutor" />
-            <RadzenDataGridColumn TItem="Paciente" Property="CedulaTutor" Title="Cedula Tutor" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Filterable="false" Sortable="false"  Frozen="true" Title="Acciones">
+                <Template Context="Item">
+                    <RadzenLink Path=@($"V_DetallesEmergencias/{Item.OrdenID}") Text="Ver" />
+                </Template>
+            </RadzenDataGridColumn>
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="PrimerNombre" Title="Primer nombre" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="SegundoNombre" Title="Segundo Nombre" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="PrimerApellido" Title="Primer Apellido" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="SegundoApellido" Title="Segundo Apellido" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="Sexo" Title="Sexo" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="Cedula" Title="Cedula" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="Ocupacion" Title="Ocupacion" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="Tutor" Title="Tutor" />
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Property="CedulaTutor" Title="Cedula Tutor" />
+
         </Columns>
 
     </RadzenDataGrid>
