--- a/Pages/Consultas/C_EmergenciaA.razor
+++ b/Pages/Consultas/C_EmergenciaA.razor
@@ -3,7 +3,7 @@
 
 @inject EmergenciaABLL EmergenciaA
 @inject PacienteBLL Paciente
-
+@inject DetalleEmergenciaABLL DetallesEmergencias
 
 <head>
     <style>
@@ -49,30 +49,32 @@
 
 
 
-<RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false"
-    FilterMode="FilterMode.Advanced" AllowGrouping="true" AllowSorting="true" AllowPaging="true"
-    PagerHorizontalAlign="HorizontalAlign.Left" Data="Paciente.GetList()" TItem="Paciente" ColumnWidth="300px"
-    LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
+    <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false"
+        FilterMode="FilterMode.Advanced" AllowGrouping="true" AllowSorting="true" AllowPaging="true"
+        PagerHorizontalAlign="HorizontalAlign.Left" Data="@DetallesEmergencias.GetList()" TItem="DetalleEmergenciaA" ColumnWidth="200px"
+        LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
 
-    <Columns>
-        <RadzenDataGridColumn TItem="Paciente" Filterable="false" Sortable="false"  Frozen="true" Title="Acciones">
-            <Template Context="Item">
-                <RadzenLink Path=@($"V_Emergencia/{Item.PacienteID}") Text="Ver" />
-            </Template>
-        </RadzenDataGridColumn>
-            <RadzenDataGridColumn TItem="Paciente" Property="PrimerNombre" Title="Primer nombre" />
-            <RadzenDataGridColumn TItem="Paciente" Property="SegundoNombre" Title="Segundo Nombre" />
-            <RadzenDataGridColumn TItem="Paciente" Property="PrimerApellido" Title="Primer Apellido" />
-            <RadzenDataGridColumn TItem="Paciente" Property="SegundoApellido" Title="Segundo Apellido" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Sexo" Title="Sexo" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Cedula" Title="Cedula" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Ocupacion" Title="Ocupacion" />
-            <RadzenDataGridColumn TItem="Paciente" Property="Tutor" Title="Tutor" />
-            <RadzenDataGridColumn TItem="Paciente" Property="CedulaTutor" Title="Cedula Tutor" />
-    </Columns>
+        <Columns>
+            <RadzenDataGridColumn TItem="DetalleEmergencia" Filterable="false" Sortable="false"  Frozen="true" Title="Acciones">
+                <Template Context="Item">
+                    <RadzenLink Path=@($"V_DetallesEmergenciasA/{Item.OrdenID}") Text="Ver" />
+                </Template>
+            </RadzenDataGridColumn>
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="PrimerNombre" Title="Primer nombre" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="SegundoNombre" Title="Segundo Nombre" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="PrimerApellido" Title="Primer Apellido" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="SegundoApellido" Title="Segundo Apellido" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="Sexo" Title="Sexo" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="Cedula" Title="Cedula" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="Tutor" Title="Tutor" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="CedulaTutor" Title="Cedula Tutor" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="Fecha" Title="Fecha" />
+            <RadzenDataGridColumn TItem="DetalleEmergenciaA" Property="Medico" Title="Medico" />
 
-</RadzenDataGrid>
+        </Columns>
+
+    </RadzenDataGrid>
 
 @code {
-
+  
 }
