--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -5,138 +5,144 @@
 
 <head>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
-<style>
-    .Entrada{
-        display: inline-block;
-        padding: 5px;
-        align-items: center;
-    }
-    .Entrada input{
-        border-radius: 50px;
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border: 15px;
-        margin: 5px;
-    }
-    .Entrada label
-    {
-        margin: 5px;
-    }
-    .Entrada textarea{
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border-radius: 15px;
-        width: 100%;
-    }
-    .Form{
-        display: block;
-    }
-    #Hallazgos input{
-        width: 100%;
-    }
+    <style>
+        .Entrada {
+            display: inline-block;
+            padding: 5px;
+            align-items: center;
+        }
 
-</style>
+        .Entrada input {
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
+
+        .Entrada label {
+            margin: 5px;
+        }
+
+        .Entrada textarea {
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border-radius: 15px;
+            width: 100%;
+        }
+
+        .Form {
+            display: block;
+        }
+
+        #Hallazgos input {
+            width: 100%;
+        }
+    </style>
 
 </head>
 
 <body>
-    
 
-    
+
+
     <div class="RHeader" style="z-index: -1;">
     </div>
 
-        
-    <div class="Form"  style="z-index: 1;">
-    
+
+    <div class="Form" style="z-index: 1;">
+
         <div style="justify-content: space-between; display: inline-flex;; width:100%;">
-        <h1>Nueva Emergencia</h1>
-            <div >
-    <div class="Entrada">
-        <label for="fecha" >Fecha:</label>
-        <input type="date" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" id="fecha" name="fecha">
-    </div>
+            <h1>Nueva Emergencia</h1>
+            <div>
+                <div class="Entrada">
+                    <label for="fecha">Fecha:</label>
+                    <input type="date" class="form-control" aria-label="Recipient's username"
+                        aria-describedby="basic-addon2" id="fecha" name="fecha">
+                </div>
 
-    <div class="Entrada">
-        <label for="Hora">Hora:</label>
-        <input type="Hora"  id="Hora"  name="Hora">
-    </div>
-    </div>
-    </div>
+                <div class="Entrada">
+                    <label for="Hora">Hora:</label>
+                    <input type="Hora" id="Hora" name="Hora">
+                </div>
+            </div>
+        </div>
 
-    <br>
-    <div class="Entrada">
-        <label for="M_Consulta" >Motivo de Consulta:</label>
-        <input @bind-value="emergencia.M_Consulta"type="M_Consulta"  id="M_Consulta"   name="M_Consulta">
-    </div>
+        <br>
+        <div class="Entrada">
+            <label for="M_Consulta">Motivo de Consulta:</label>
+            <input @bind-value="emergencia.M_Consulta" type="M_Consulta" id="M_Consulta" name="M_Consulta">
+        </div>
 
-    <div class="Entrada">
-        <label for="A_Relacionados" >Antecedentes Relacionados:</label>
-        <input type="A_Relacionados"  id="A_Relacionados"   name="A_Relacionados">
-    </div>
-    <br>
-    <div class="Entrada">
-        <label for="A_Previas" >Atenciones Previas:</label>
-        <input type="A_Previas"  id="A_Previas"   name="A_Previas">
-    </div>
+        <div class="Entrada">
+            <label for="A_Relacionados">Antecedentes Relacionados:</label>
+            <input type="A_Relacionados" @bind-value="emergencia.Antecedentes" id="A_Relacionados" name="A_Relacionados">
+        </div>
+        <br>
+        <div class="Entrada">
+            <label for="A_Previas">Atenciones Previas:</label>
+            <input type="A_Previas"@bind-value="emergencia.AtencionesPrevias" id="A_Previas" name="A_Previas">
+        </div>
 
-    <div class="Entrada">
-        <label for="Donde" >Donde?</label>
-        <input type="Donde"  id="Donde"   name="Donde">
-    </div>
+        <div class="Entrada">
+            <label for="Donde">Donde?</label>
+            <input type="Donde" @bind-value="emergencia.Donde" id="Donde" name="Donde">
+        </div>
 
-    <div class="Entrada">
-        <label for="M_Base" >Medico Base:</label>
-        <input type="M_Base"  id="M_Base"   name="M_Base">
-    </div>
+        <div class="Entrada">
+            <label for="M_Base">Medico Base:</label>
+            <input type="M_Base" @bind-value="emergencia.MedicoBase" id="M_Base" name="M_Base">
+        </div>
 
-    <div class="Entrada">
-        <label for="Peso" >Peso:</label>
-        <input type="Peso"  id="Peso"   name="Peso">
-        <label for="Peso" >lbs</label>
-    </div>
-    <br>
-    <div class="Entrada">
-        <label >Signos Vitales</label>
-        <label for="TA" >TA:</label>
-        <input type="TA"  id="TA"   name="TA">
-        <label for="FC" >FC:</label>
-        <input type="FC"  id="FC"   name="FC">
-        <label for="Temperatura" >Temperatura:</label>
-        <input type="Temperatura"  id="Temperatura"   name="Temperatura">
-        <label for="Temperatura" >C</label>
-    </div>
+        <div class="Entrada">
+            <label for="Peso">Peso:</label>
+            <input type="Peso" id="Peso" @bind-value="emergencia.Peso" name="Peso">
+            <label for="Peso">lbs</label>
+        </div>
+        <br>
+        <div class="Entrada">
+            <label>Signos Vitales</label>
+            <label for="TA">TA:</label>
+            <input type="TA" id="TA" @bind-value="emergencia.TA" name="TA">
+            <label for="FC">FC:</label>
+            <input type="FC" id="FC" @bind-value="emergencia.FC" name="FC">
+            <label for="Temperatura">Temperatura:</label>
+            <input type="Temperatura" id="Temperatura" @bind-value="emergencia.Temperatura" name="Temperatura">
+            <label for="Temperatura">C</label>
+        </div>
 
-    <div class="Entrada" style="display: inline-block;">
-        <label >Laboratorios</label>
-        <label for="Hemograma" >Hemograma:</label>
-        <input type="Hemograma"  id="Hemograma"   name="Hemograma">
-        <label for="Ex_Orina" >Ex.Orina:</label>
-        <input type="Ex_Orina"  id="Ex_Orina"   name="Ex_Orina">
-        <label for="Glisemia" >Glisemia:</label>
-        <input type="Glisemia"  id="Glisemia"   name="Glisemia">
-        <label for="Coprologico" >Coprologico:</label>
-        <input type="Coprologico"  id="Coprologico"   name="Coprologico">
-    </div>
-    <br>
-    <div class="Entrada" style="display: flex; align-items: center;" >
-        <label for="Imagenes" >Imagenes:</label>
-        <input type="Imagenes"  id="Imagenes"   name="Imagenes">
+        <div class="Entrada" style="display: inline-block;">
+            <label>Laboratorios</label>
+            <label for="Hemograma">Hemograma:</label>
+            <input type="Hemograma" @bind-value="emergencia.Hemogramas" id="Hemograma" name="Hemograma">
+            <label for="Ex_Orina">Ex.Orina:</label>
+            <input type="Ex_Orina" id="Ex_Orina"@bind-value="emergencia.Ex_Orina" name="Ex_Orina">
+            <label for="Glisemia">Glisemia:</label>
+            <input type="Glisemia" id="Glisemia" @bind-value="emergencia.Glisemia" name="Glisemia">
+            <label for="Coprologico">Coprologico:</label>
+            <input type="Coprologico" id="Coprologico" @bind-value="emergencia.Coprologico" name="Coprologico">
+        </div>
+        <br>
+        <div class="Entrada" style="display: flex; align-items: center;">
+            <label for="Imagenes">Imagenes:</label>
+            <input type="Imagenes" id="Imagenes" @bind-value="emergencia.Imagenes" name="Imagenes">
 
-        <label for="Especificacion" >Especfique</label>
-        <textarea type="Especificacion"  id="Especificacion"   name="Especificacion"></textarea>
+            <label for="Especificacion">Especfique</label>
+            <textarea type="Especificacion" id="Especificacion" @bind="emergencia.Especifique" name="Especificacion"></textarea>
+        </div>
     </div>
-    </div>
-    <div  class="Entrada" style="display: flex;">
+    <div class="Entrada" style="display: flex;">
         <label for="Diagnostico">Diagnostico</label>
-        <input type="Diagnostico" id="Diagnostico" style="width: 100%;" name="Diagnostico">
+        <input type="Diagnostico" id="Diagnostico" style="width: 100%;" @bind-value="emergencia.Diagnostico" name="Diagnostico">
     </div>
-        <div class="Entrada " style="display:flex;" >
-        <label for="TyM" >Tratamientos y Medicamentos:</label>
-        <textarea type="TyM"  id="TyM"  style="width: 100%;" name="TyM"></textarea>
+    <div class="Entrada " style="display:flex;">
+        <label for="TyM">Tratamientos y Medicamentos:</label>
+        <textarea type="TyM" id="TyM" style="width: 100%;" @bind="emergencia.TyM" name="TyM"></textarea>
     </div>
     <center>
-        <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" @onclick ="Guardar">Registrar</button>
+        <button type="button" class="btn btn-primary"
+            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
+            @onclick="Guardar">Registrar</button>
     </center>
 
 
@@ -146,22 +152,23 @@
 @code {
 
 
-    public Emergencia emergencia {get; set;} = new Emergencia();
+    public Emergencia emergencia { get; set; } = new Emergencia();
 
-     protected override void OnInitialized(){
+    protected override void OnInitialized()
+    {
 
-        emergencia.OrdenID=0;
+        emergencia.OrdenID = 0;
     }
 
 
-     private void Buscar()
+    private void Buscar()
     {
         var emergenciaEncontrada = emergenciaBll.Buscar(emergencia.OrdenID);
-        if(emergenciaEncontrada != null)
+        if (emergenciaEncontrada != null)
         {
             Console.WriteLine($"Se encontro una ocupacion con el ID{this.emergencia.OrdenID}");
             this.emergencia = emergenciaEncontrada;
-            
+
         }
         else
         {
@@ -171,41 +178,46 @@
     }
 
 
-    public void Nuevo(){
+    public void Nuevo()
+    {
         this.emergencia = new Emergencia();
     }
 
-     public void Guardar(){
+    public void Guardar()
+    {
 
         emergenciaBll.Guardar(this.emergencia);
         Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
         this.Nuevo();
-        
-        
+
+
         //Console.WriteLine("Campos no validos o no completados");
     }
-    
 
 
 
-    public void eliminar(){
 
-       
-        
-    bool RES = emergenciaBll.Eliminar(this.emergencia);
+    public void eliminar()
+    {
 
-    if(RES == false){
-        Console.WriteLine("Eliminado Correctamente");
-        Nuevo();
+
+
+        bool RES = emergenciaBll.Eliminar(this.emergencia);
+
+        if (RES == false)
+        {
+            Console.WriteLine("Eliminado Correctamente");
+            Nuevo();
+        }
+        else
+        {
+            Console.WriteLine("No se borro nada");
+        }
+
+
+
+
     }
-    else{
-       Console.WriteLine("No se borro nada");
-    }
-            
-            
 
-        
-    }
-    
 
 }
