--- a/Pages/Consultas/C_Emergencia.razor
+++ b/Pages/Consultas/C_Emergencia.razor
@@ -1,9 +1,8 @@
 ﻿@page "/C_Emergencia"
-
+    <h3>Consultar Emergencias</h3>
 
 
 @inject DetalleEmergenciaBLL DetallesEmergencias
-
 
 <head>
     <style>
@@ -47,8 +46,6 @@
     </style>
 </head>
 <div class="body">
-
-    <h3>Consultar DetallesEmergencias</h3>
 
     <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false"
         FilterMode="FilterMode.Advanced" AllowGrouping="true" AllowSorting="true" AllowPaging="true"
